--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "0e64282f-858f-4b64-abdb-67e4d2525be2"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
